--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 autopep8==2.0.2
-pycodestyle==2.10.0
-tomli==2.0.1
 customtkinter==5.1.2
+flake8==6.0.0
+pycodestyle==2.10.0
+pyflakes==3.0.1
+pylint==2.17.3
+tomli==2.0.1
+
+
